# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import choresRouter from "./chores";
 import checklistRouter from "./checklist";
 import historyRouter from "./history";
 import balancesRouter from "./balances";
+import settingsRouter from "./settings";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,6 @@ router.use(choresRouter);
 router.use(checklistRouter);
 router.use(historyRouter);
 router.use(balancesRouter);
+router.use(settingsRouter);
 
 export default router;
