# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./chores";
 export * from "./assignments";
 export * from "./completions";
 export * from "./payouts";
+export * from "./settings";
